fix world map getting cut off when page is zoomed

--- a/static2/css/statsviewer.css
+++ b/static2/css/statsviewer.css
@@ -22,7 +22,7 @@
 
 #world-map {
     /* adjust programmatically later on probably */
-    width: 1920px;
+    width: 100%;
 }
 
 .container {
